# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.113 2004/11/19 18:19:23 wolf31o2 Exp $

  19 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/gamecd-xinitrc, livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh:
  Fixing up some GameCD stuff and also fixing a problem with the ls and grep
  aliases having --color rather than --color=auto.

  17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Let's try actually making a proper edit on livecd/files/livecd-local.start
  this time, shall we...

  17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Fixing up livecd/files/livecd-local.start to remove ALSA config and make
  x-setup check for /etc/startx.

  14 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh:
  Fixing minor sed bug in gamecdfs-update.sh.

  07 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/snapshot_template.spec,
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh:
  Fixing typo in snapshot_template.spec and closing bug #70321.

  02 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/pre-kmerge.sh:
  Ssshhh... I've added my super-secret pre-kmerge.sh sed replacement so
  genkernel will only add the 1024x768 version of the gensplash image to the
  bzImage, which added with the livecd-stage2 removal of the unused splash
  images, makes for a significantly smaller (54MB v. 50MB) LiveCD.

  29 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  livecd/runscript/sparc64-archscript.sh:
  Updated with silo/mkisofs patch from gustavoz.

  28 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-help.msg: