@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.16 2004/10/15 02:27:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.17 2004/11/23 00:02:57 zhen Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -57,7 +57,7 @@ class generic_stage_target(generic_target):
 				"mips" : "mips",
 				"mips64" : "mips",
 				"arm" : "arm",
-				"arm" : "armv4l"
+				"armv4l" : "arm"
 		}
 	
 		mymachine=os.uname()[4]
